[package]
name = "mfnf-sitemap-parser"
version = "0.1.0"
authors = ["Valentin Roland <valentin@vroland.de>"]

[lib]
name = "mfnf_sitemap"

[[bin]]
name = "parse_bookmap"
path = "src/main.rs"

[dependencies]
mediawiki_parser = "0.4"
mwparser_utils = { git = "https://github.com/vroland/mediawiki-parser-utils" }
structopt = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
